<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">holaivy.pri.shop</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="apptitle">新疆干果市场</string>
    <string name="title_activity_detail">宝贝展示</string>
    <string name="title_activity_shopping_cart">购物车</string>
    <string name="title_activity_info">我的空间</string>
    <string name="text_view_shopcart">查看购物车</string>
    <string name="text_view_info">管理我的信息</string>
    <string name="text_you">含邮费</string>
    <string name="text_jin_pack">市斤装</string>
    <string name="text_kg_pack">公斤装</string>
    <string name="text_pack_type">包装类型:</string>
    <string name="text_jin_unit">市斤</string>
    <string name="text_buy_num">购买数量:</string>
    <string name="text_numlabel">数量:</string>
    <string name="text_default_buy_num">2</string>
    <string name="text_buy_to_cart">添加到购物车</string>
    <string name="text_shop_price">价格:</string>
    <string name="text_example_price">25</string>
    <string name="text_example_price_zero">0</string>
    <string name="text_example_shop_comments">手剥即开 营养丰富</string>
    <string name="text_example_shop_label">椒盐味新疆巴旦木</string>
    <string name="text_empty" />
    <string name="text_express_delivery">快递:</string>
    <string name="text_ok">确定</string>
    <string name="text_cancel">取消</string>
    <string name="text_buy_info">请选择商品信息</string>
    <string name="text_total_price">总价:</string>
    <string name="text_example_priceunit">元/500g</string>
    <string name="text_example_time">2011-01-01 10:00:00</string>
    <string name="text_example_num">1</string>
    <string name="text_example_sum">25元</string>
    <string name="text_example_yuantag">￥</string>
    <string name="text_settle">去结算</string>
    <string name="text_shop_total_price">商品总价:</string>
    <string name="text_name">收货人:</string>
    <string name="text_tel">电话:</string>
    <string name="text_province">省份:</string>
    <string name="title_activity_orders">填写订单</string>
    <string name="text_sp_addr">区县</string>
    <string name="text_sp_city">城市</string>
    <string name="text_sp_province">省份</string>
    <string name="text_ok_return">确定返回</string>
    <string name="text_region">地区:</string>
    <string name="text_telnum">手机号:</string>
    <string name="text_addr">地址:</string>
    <string name="text_pay_sum">应付金额:</string>
    <string name="text_btn_orders">提交订单</string>

</resources>