<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:background="#E2F2FF"
    android:gravity="center_vertical"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp" >

        <TextView
            android:id="@+id/textViewLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_example_shop_label"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#6466D5" />

        <TextView
            android:id="@+id/textViewTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_example_time"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="3dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_shop_price"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/textViewPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_example_price"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/textViewPriceUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_example_priceunit"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/text_numlabel"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/textViewNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:text="@string/text_example_num"
            android:textColor="#EF0000"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/textViewUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:text="@string/text_jin_unit"
            android:textSize="12sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" >
        </View>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/text_total_price"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/textViewPay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:text="@string/text_example_sum"
            android:textColor="#EF0000"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/textViewPack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/text_jin_pack"
            android:textSize="12sp" />
    </LinearLayout>

</LinearLayout>