<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="65dp"
    android:gravity="center_vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginLeft="10dp"
        android:contentDescription="@string/text_empty"
        android:src="@drawable/example1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textViewLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_example_shop_label"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text=""
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_shop_price"
                android:textColor="#EF0000"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textViewPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/text_example_price"
                android:textColor="#EF0000"
                android:textSize="14sp" />
            <TextView
                android:id="@+id/textViewPriceUnit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_example_price"
                android:textColor="#EF0000"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textViewYou"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/text_you"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp" >

            <TextView
                android:id="@+id/textViewComments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_example_shop_comments"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>